# solana-ido

./: App.jsx  ProjectDetails.jsx  ProjectList.jsx  README.md  index.html  package.json
contracts/: Cargo.toml
contracts/src/: Cargo.toml  lib.rs  main.rs  project_launchpad.rs
src/: App.js  index.js
src/components/Navbar/: index.js
src/components/WalletModal/: Option.js  index.js
src/components/WalletModalOKX/: index.js
src/components/Web3Status/: index.js
src/connectors/: NetworkConnector.js  index.js
src/context/: applicationContext.js  poolContext.js
src/pages/: Connection.js  home.js
src/utils/: contract.js  getLibrary.js
