[package]
name = "solana-ido"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["associated-token"] }
solana-program = "1.7.11"

[lib]
name = "solana-ido"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[features]
default = []
test-bpf = {}

[profile.release]
# Optimization level for the compiler to use during release builds
opt-level = 3

[profile.dev]
# Optimization level for the compiler to use during development builds
opt-level = 0
